--- a/templates/index.html
+++ b/templates/index.html
@@ -15,15 +15,18 @@
         <form action="" method="post">
 
             {% if time_input %}
-                <textarea id="hourInput" name='time_input' rows="3" cols="80" placeholder="capital 8:15-8:25, 9-9:10, 1-3, 3:21-6:51&#10;overhead 8:05-8:15, 8:25-9, 9:10-1, 3-3:21">{{ time_input }}</textarea>
+                <textarea id="hourInput" name='time_input' rows="4" cols="80" placeholder="id1 8:15-8:25, 9-9:10, 1-3, 3:21-6:51&#10;id2 8:05-8:15, 8:25-9, 9:10-1&#10;id3 15-3:21">{{ time_input }}</textarea>
 
             {% else %}
-                <textarea id="hourInput" name='time_input' rows="3" cols="80" placeholder="capital 8:15-8:25, 9-9:10, 1-3, 3:21-6:51&#10;overhead 8:05-8:15, 8:25-9, 9:10-1, 3-3:21"></textarea>
+                <textarea id="hourInput" name='time_input' rows="4" cols="80" placeholder="id1 8:15-8:25, 9-9:10, 1-3, 3:21-6:51&#10;id2 8:05-8:15, 8:25-9, 9:10-1&#10;id3 15-3:21"></textarea>
             {% endif %}
 
             <br>
+            <p style="margin-top:0;font-size:10px">* Lines starting with a pm time should be written with the first number in 24 hour format. See id3 in example.</p>
+
             <br>
-            <button>calculate</button>
+            <br>
+            <button accesskey="n">calculate</button>
         </form>
     </body>
 
