--- a/templates/index.html
+++ b/templates/index.html
@@ -4,50 +4,83 @@
         <meta charset="utf-8">
         <title>SpaceTime Calculator</title>
     </head>
+    </style>
     <body>
-
         <h1>SpaceTime Calculator</h1>
         <a href="{{ url_for('help') }}">Help</a>
         <br>
         <br>
         <label>Time input</label>
-
         <form action="" method="post">
-
             {% if time_input %}
                 <textarea id="hourInput" name='time_input' rows="4" cols="80" placeholder="id1 8:15-8:25, 9-9:10, 1-3, 3:21-6:51&#10;id2 8:05-8:15, 8:25-9, 9:10-1&#10;id3 15-3:21">{{ time_input }}</textarea>
-
             {% else %}
                 <textarea id="hourInput" name='time_input' rows="4" cols="80" placeholder="id1 8:15-8:25, 9-9:10, 1-3, 3:21-6:51&#10;id2 8:05-8:15, 8:25-9, 9:10-1&#10;id3 15-3:21"></textarea>
             {% endif %}
-
-            <br>
-            <p style="margin-top:0;font-size:10px">* Lines starting with a pm time should be written with the first number in 24 hour format. See id3 in example.</p>
-
             <br>
             <br>
             <button accesskey="n">calculate</button>
         </form>
     </body>
+    <br>
 
-    {% if breaks %}
-        <h4>breaks</h4>
-        {% for break in breaks %}
-            <p>{{ break[0] }}-{{ break[1] }} == {{ break[2] }} hr<br></p>
-        {% endfor %}
-        <br>
+    <table style="text-align:left;">
+        <tr style="font-size:120%">
+            {% if double_results %}
+                <th>Unordered Calculation</th>
+                <th>Ordered Calculation</th>
+            {% endif %}
+        </tr>
+        <tr style="vertical-align:top;">
+            <td style="width:400px;">
+                {% if breaks %}
+                    <h5>Breaks</h5>
+                    {% for break in breaks %}
+                        <p>{{ break[0] }}-{{ break[1] }} = {{ break[2] }} hr<br></p>
+                    {% endfor %}
+                    <br>
+                {% endif %}
+
+                {% if calculated_hours %}
+                    {% if success %}
+                        <h5>Totals</h5>
+                        {% for chg_hrs in calculated_hours %}
+                            <p>{{ chg_hrs[0] }} {{ chg_hrs[1] }} hr</p>
+                        {% endfor %}
+                    {% else %}
+                        <h5>Invalid time input</h5>
+                        <p>{{ calculated_hours }}</p>
+                    {% endif %}
+                {% endif %}
+            </td>
+
+            {% if double_results %}
+                <td style="width:400px;">
+                    {% if breaks_ord %}
+                        <h5>Breaks</h5>
+                        {% for break in breaks_ord %}
+                            <p>{{ break[0] }}-{{ break[1] }} = {{ break[2] }} hr<br></p>
+                        {% endfor %}
+                        <br>
+                    {% endif %}
+
+                    {% if calculated_hours_ord %}
+                        {% if success_ord %}
+                            <h5>Totals</h5>
+                            {% for chg_hrs in calculated_hours_ord %}
+                                <p>{{ chg_hrs[0] }} {{ chg_hrs[1] }} hr</p>
+                            {% endfor %}
+                        {% else %}
+                            <h5>Invalid time input</h5>
+                            <p>{{ calculated_hours_ord }}</p>
+                        {% endif %}
+                    {% endif %}
+                </td>
+            {% endif %}
+        </tr>
+    </table>
+
+    {% if double_results %}
+        <p style="margin-top:0;font-size:14px">* Ensure lines starting with a PM time are written in 24 hour format OR that entry lines are ordered by the first time in the line and use the corresponding calculation.</p>
     {% endif %}
-
-    {% if calculated_hours %}
-        {% if success %}
-            <h4>totals</h4>
-            {% for chg_hrs in calculated_hours %}
-                <p>{{ chg_hrs[0] }} {{ chg_hrs[1] }} hr</p>
-            {% endfor %}
-        {% else %}
-            <h4>Invalid time input</h4>
-            <p>{{ calculated_hours }}</p>
-        {% endif %}
-    {% endif %}
-
 </html>
