--- a/templates/help.html
+++ b/templates/help.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
+    <style>
+    body {
+        background-color: black;
+        color: white;
+    }
+    </style>
+
     <head>
         <meta charset="utf-8">
         <title>SpaceTime Calculator</title>
     </head>
+
     <body>
 
         <h1>Help</h1>
-        <a href="{{ url_for('index') }}">Home</a>
+        <a style="color:white" href="{{ url_for('index') }}">Home</a>
         <br>
         <div style="width:90ch">
         <pre style="white-space: pre-wrap;">
@@ -19,7 +27,7 @@ Time can be passed in with minutes or frational hours. The fractional hours will
 
 The time is computed with two different methods. The first method assumes that the time inputs are ordered by the first time in each line. The second method assumes that lines starting with a PM time are encoded with a 'p' or written in 24 hour format (ie. 'id1 1p-2' or 'id2 13-2' rather than 'id3 1-2'). If these calulations compute different results for breaks or totals, both results are displayed. It is recommended to format inputs according to one of the calculation methods.
 
-    Example time inputs:
+    Example inputs:
 
         id1 8-8:30, 9-9:30, 11-1, 1:42-3:12, 4:12-6
         id2 8:30-9, 9:30-11, 1-1:42, 3:12-4:12
@@ -41,7 +49,7 @@ The time is computed with two different methods. The first method assumes that t
         id2 12-4
         id3 18-9
 
-    Example calculation outputs:
+    Example outputs:
 
         totals
         id1 = 3.7 hrs
@@ -66,9 +74,9 @@ The time is computed with two different methods. The first method assumes that t
         total: 12.0 hr
 
 
-If you notice a calculation error, please <a href="mailto:danielfrentzel@gmail.com">contact</a> the maintainer with the time input.
+If you notice a calculation error, please <a style="color:white" href="mailto:danielfrentzel@gmail.com">contact</a> the maintainer with the time input.
 
-<a href="https://github.com/danielfrentzel/spacetime-calculator">Source</a>
+<a style="color:white" href="https://github.com/danielfrentzel/spacetime-calculator">Source</a>
         </pre>
         </div>
 
