--- a/templates/index.html
+++ b/templates/index.html
@@ -31,9 +31,9 @@
         <label>Time input</label>
         <form action="" method="post">
             {% if time_input %}
-                <textarea id="hourInput" name='time_input' rows="4" cols="80" placeholder="id1 8:15-8:25, 9-9:10, 1-3, 3:21-6:51&#10;id2 8:05-8:15, 8:25-9, 9:10-1&#10;id3 15-3:21">{{ time_input }}</textarea>
+                <textarea id="hourInput" name='time_input' rows="4" cols="80" placeholder="id1 7:30-8:25, 10-1&#10;id2 8:25-10, 3:21-5&#10;id3 1p-3:21">{{ time_input }}</textarea>
             {% else %}
-                <textarea id="hourInput" name='time_input' rows="4" cols="80" placeholder="id1 8:15-8:25, 9-9:10, 1-3, 3:21-6:51&#10;id2 8:05-8:15, 8:25-9, 9:10-1&#10;id3 15-3:21"></textarea>
+                <textarea id="hourInput" name='time_input' rows="4" cols="80" placeholder="id1 7:30-8:25, 10-1&#10;id2 8:25-10, 3:21-5&#10;id3 1p-3:21"></textarea>
             {% endif %}
             <br>
             <br>
