--- a/templates/help.html
+++ b/templates/help.html
@@ -23,7 +23,7 @@ This tool is intended to be used to sum up intervals of time worked on different
 
 The time ranges in every line are required to be dashed intervals, comma separated and sorted. An identifier, followed by a space is required, at the beginning of each time entry line.
 
-Time can be passed in with minutes or frational hours. The fractional hours will be calculated from minutes with percision through the summation, but rounded to the nearest tenth for the total. Each charge number will be displayed with hundredths percision as to not short the employee any hours by pre rounding (ie. 0.04 + 0.04 = .08 ~= 0.1).
+Time can be passed in with minutes or frational hours. The fractional hours will be calculated from minutes with percision through the summation. Totals are rounded to the nearest tenth and the subtime entries are ensured to add up to the actual total. In order to do this, subtimes are adjusted to remove any rounding discrepancy. A preference is given to adjust subtimes closest to rounding the other way and to subtimes with a larger amount of time worked, in that order. Rest assured that subtime adjustments do not short the employee any time worked and give the most accurate breakdown of time worked.
 
 The time is computed with two different methods. The first method assumes that the time inputs are ordered by the first time in each line. The second method assumes that lines starting with a PM time are encoded with a 'p' or written in 24 hour format (ie. 'id1 1p-2' or 'id2 13-2' rather than 'id3 1-2'). If these calulations compute different results for breaks or totals, both results are displayed. It is recommended to format inputs according to one of the calculation methods.
 
@@ -74,7 +74,7 @@ The time is computed with two different methods. The first method assumes that t
         total: 12.0 hr
 
 
-If you notice a calculation error, please <a style="color:white" href="mailto:danielfrentzel@gmail.com">contact</a> the maintainer with the time input.
+If you notice a calculation error, please <a style="color:white" href="mailto:7daniel49@gmail.com">contact</a> the maintainer with the time input.
 
 <a style="color:white" href="https://github.com/danielfrentzel/spacetime-calculator">Source</a>
         </pre>
