--- a/templates/help.html
+++ b/templates/help.html
@@ -19,13 +19,13 @@
         <br>
         <div style="width:90ch">
         <pre style="white-space: pre-wrap;">
-This tool is intended to be used to sum up intervals of time worked on different charge numbers. It will notify of breaks taken throughout the day and invalid time entries (overlapping entries or non ordered entries).
+This tool was created to simplify the summation of time intervals worked on different charge numbers. It will notify of breaks taken throughout the day and invalid time entries (overlapping entries or non ordered entries).
 
-The time ranges in every line are required to be dashed intervals, comma separated and sorted. An identifier, followed by a space is required, at the beginning of each time entry line.
+The time ranges in every line are required to be dashed intervals, comma separated and sorted. An identifier, followed by a space is required at the beginning of each time entry line. See examples below.
 
-Time can be passed in with minutes or frational hours. The fractional hours will be calculated from minutes with precision through the summation. Totals are rounded to the nearest tenth and the subtime entries are ensured to add up to the actual total. In order to do this, subtimes are adjusted to remove any rounding discrepancy. A preference is given to adjust subtimes closest to rounding the other way and then to subtimes with a larger amount of time worked. Rest assured that subtime adjustments do not short the employee any time worked and give the most accurate breakdown of time worked per category.
+Time can be passed in with minutes or frational hours. The fractional hours will be calculated from minutes with precision through the summation. Totals are rounded to the nearest tenth and the subtime entries are ensured to add up to the exact rounded total. In order to do this, subtimes are adjusted to remove any rounding discrepancy. A preference is given to adjust subtimes closest to rounding the other way and then to subtimes with a larger amount of time worked. Rest assured that subtime adjustments do not short the employee any time worked and give the most accurate breakdown of time worked per category while not under or over representing the total hours worked.
 
-The time is computed with two different methods. The first method assumes that the time inputs are ordered by the first time in each line. The second method assumes that lines starting with a PM time are encoded with a 'p' or written in 24 hour format (ie. 'id1 1p-2' or 'id2 13-2' rather than 'id3 1-2'). If these calculations compute different results for breaks or totals, both results are displayed. It is recommended to format inputs according to one of the calculation methods.
+The time is computed with two different methods. The first method assumes that the time inputs are ordered by the first time in each line. The second method assumes that lines starting with a PM time are encoded with a 'p' or written in 24 hour format (ie. 'id1 1p-2' or 'id2 13-2' rather than 'id3 1-2'). Note, it is only necessary to encode the first time in a line if it is indeed a PM time. If the two calculation methods compute different results for breaks or totals, both respective results are displayed. It is recommended to format inputs according to one of the calculation methods.
 
     Example inputs:
 
@@ -74,7 +74,7 @@ The time is computed with two different methods. The first method assumes that t
         total: 12.0 hr
 
 
-If you notice a calculation error, please <a style="color:white" href="mailto:7daniel49@gmail.com">contact</a> the maintainer with the time input.
+If you notice a calculation error, please <a style="color:white" href="mailto:7daniel49@gmail.com">contact</a> the maintainer with the time input or submit a pull request.
 
 <a style="color:white" href="https://github.com/danielfrentzel/spacetime-calculator">Source</a>
         </pre>
