--- a/templates/index.html
+++ b/templates/index.html
@@ -31,9 +31,9 @@
         <label>Time input</label>
         <form action="" method="post">
             {% if time_input %}
-                <textarea id="hourInput" name='time_input' rows="6" cols="80" placeholder="id1 7:30-8:25, 10-1&#10;id2 8:25-10, 3:21-5&#10;id3 1p-3:21">{{ time_input }}</textarea>
+                <textarea id="hourInput" name='time_input' rows="6" cols="80" placeholder="id1 7:30-8:25, 10-1  # comment&#10;id2 8:25-10, 3:21-5&#10;id3 1p-3:21&#10;&#10;\=9.6">{{ time_input }}</textarea>
             {% else %}
-                <textarea id="hourInput" name='time_input' rows="6" cols="80" placeholder="id1 7:30-8:25, 10-1&#10;id2 8:25-10, 3:21-5&#10;id3 1p-3:21"></textarea>
+                <textarea id="hourInput" name='time_input' rows="6" cols="80" placeholder="id1 7:30-8:25, 10-1  # comment&#10;id2 8:25-10, 3:21-5&#10;id3 1p-3:21&#10;&#10;\=9.6"></textarea>
             {% endif %}
             <br>
             <br>
