--- a/templates/help.html
+++ b/templates/help.html
@@ -90,10 +90,5 @@ The time is computed with two different methods. The first method assumes that t
         id3 11-6 &lt;comment&gt;
 
 
-If you notice a calculation error, please <a style="color:white" href="mailto:7daniel49@gmail.com">contact</a> the maintainer with the time input or submit a pull request.
-
-<a style="color:white" href="https://github.com/danielfrentzel/spacetime-calculator">Source</a>
-        </pre>
-        </div>
-
+If you notice a calculation error, please <a style="color:white" href="mailto:7daniel49@gmail.com">contact</a> the maintainer with the time input.
 </html>
